--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,6 +1,7 @@
 *{
     margin: 0px;
     padding: 0px;
+    font-family: "Open Sans", serif;
 }
 /* body */
 body{
@@ -72,4 +73,131 @@ button{
     width: 320px;
     height: 304px;
 }
-/* market place */
+/* brand list */
+.brand-list{
+    margin: 50px 160px 50px 160px;
+    padding: 30px;
+}
+.logos{
+    display: flex;
+    justify-content: space-between;
+    
+}
+.logos img{
+    width: 85px;
+    height: 20px;
+}
+/* collections start */
+.collections{
+    margin: 90px 165px 100px 165px;
+}
+.section-title{
+    font-size: 28px;
+    color: #3A3A3A;
+    padding: 3px 0px;
+    margin-bottom: 30px;
+    text-align: center;
+}
+.gears{
+    display:grid ;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+}
+.gear{
+    padding: 14px;
+    box-shadow: 0px 5px 40px 10px #e2e2e2 ;
+    border-radius: 5px;
+}
+.gear img{
+    width: 100%;
+}
+.gear-title{
+    font-size: 22px;
+    color: #18191F;
+    padding: 6px 0px;
+    margin: 6px 0px;
+}
+.gear-title h3{
+    font-weight: 600;
+}
+.price h2{
+    font-size: 22px;
+    font-weight: 400;
+    padding-bottom: 10px;
+}
+.rating{
+    display: flex;
+    color: #5E6366;
+    font-size: 10px;
+    gap: 8px;
+}
+.stars{
+    color: #FB8200;
+}
+.gear-details{
+    color: #787885;
+    font-size: 14px;
+    font-weight: 700;
+    padding-bottom: 3px;
+}
+.section-footer{
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    font-size: 19px;
+    color: #E02C6D;
+    margin-top: 45px;
+}
+/* featured product */
+.featured{
+    margin: 100px 140px;
+    display: grid;
+    grid-template-columns: 3fr 5fr;
+    justify-items: center;
+}
+.product-photo img{
+    width: 100%;
+}
+.product-detail h1{
+    color: #0A0826;
+    font-size: 30px;
+    font-weight: 700;
+    margin-top: 23px;
+    margin-bottom: 13px;
+}
+.product-detail p{
+    color: #6C6C6C;
+    font-size: 14px;
+    font-weight: 700;
+}
+.product-detail button{
+    font-size: 20px;
+    font-weight: 700;
+    border-radius: 0px;
+    margin-top: 15px;
+}
+/* footer */
+.footer{
+    display: flex;
+    flex-direction: column;
+    gap: 3px;
+    background-color: #0A0826;
+    padding: 50px;
+    align-items: center;
+}
+.footer h2{
+    font-size: 24px;
+    color: #FFFFFF;
+}
+.footer p{
+    color: #FFFFFF;
+    font-size: 12px;
+}
+.social-medias{
+    display: flex;
+    color: #FFFFFF;
+    gap: 16px;
+    padding-top: 10px;
+}
+
+
